--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,7 @@ p{
 
 .aboutus-image{
     padding: 3rem 0;
+    border-radius: 100%;
 }
 
 .aboutus-subtitle p{
@@ -396,6 +397,7 @@ p{
     padding: 0.5rem 2rem;
     border-radius: 25px;
 }
+.
 
 
 
